--- a/app/src/main/res/layout/graph_activity.xml
+++ b/app/src/main/res/layout/graph_activity.xml
@@ -27,16 +27,10 @@
         tools:context="sharethemeal.org.android.hackathon.GraphActivity"
         tools:showIn="@layout/graph_activity">
 
-        <com.robinhood.spark.SparkView
-            android:id="@+id/sparkView"
+        <org.sharethemeal.hackathon.android.DonatedMealsView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="40dp"
-            app:spark_animateChanges="true"
-            app:spark_cornerRadius="2dp"
-            app:spark_lineColor="@color/colorAccent"
-            app:spark_lineWidth="2dp"
-            app:spark_scrubEnabled="true" />
+            android:padding="40dp" />
 
     </android.support.constraint.ConstraintLayout>
 
